tutorial.04/case04/history.css
/*
   New Perspectives on HTML and CSS
   Tutorial 4
   Case Problem 1

   History Style Sheet
   Author: Alexander Rivera
   Date: 06-12-2023

   Filename:         history.css
   Supporting Files: 

*/

header, section, nav {
    display: block;
}

* {
    margin: 0;
    padding: 0;
}

header {
    background-color: rgb(51, 51, 51);
    text-align: center;
    width: 55em;
}

header img {
      height: 4em;
    }

nav {
    float: left;
    width: 15em;
    background-color: rgb(51, 51, 51);
}

nav ul {
    font-family: Century Gothic, sans-serif;
    font-size: 0.7em;
    list-style: none;
    line-height: 1.4em;
    margin-left: 1em;
    margin-bottom: 1.2em;
}

nav a {
    text-decoration: none;
    color: rgb(212, 212, 212);
}

nav a:hover {
    color: white;
}

#speech {
    background-color: rgb(212, 212, 212);
    width: 40em;
    float: left;
    font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
}

#speech h1 {
    background-color: rgb(51, 51, 51);
    color: rgb(212, 212, 212);
    font-size: 2em;
    text-align: center;
    }

#speech p {
    font-size: 0.9em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 1em;
    margin-top: 1em;
    }

#speech p:first-of-type:first-letter {
    float: left;
    font-size: 4em;
    line-height: 0.8em;
    margin-right: 0.3em;
    padding-right: 0.2em;
    padding-bottom: 0.2em;
    border-right: 0.002em solid black;
    border-bottom: 0.002em solid black;
    }

#speech p:first-of-type:first-line {
    text-transform: uppercase;
    }

